# glava

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE_ORIGINAL  Makefile  README.md  Uninstall GLava [sudo].sh  bindings.c  bindings.h  fifo.c  fifo.h  glad.c  glad_generate.sh  glava.c  glfw_wcb.c  glsl_ext.c  glsl_ext.h  glx_wcb.c  jack_input.c  jack_input.h  meson.build  meson_options.txt  pcm.c  pcm.h  pulse_input.c  render.c  render.h  ui.c  ui.h  xwin.c  xwin.h  xwincheck.c
.github/: FUNDING.yml
glava/: fifo.h  glad.c  glad.h  glava.c  glava.h  glfw_wcb.c  glsl_ext.c  glsl_ext.h  glx_wcb.c  pulse_input.c  pulse_input.h  render.c  render.h  xwin.c  xwin.h
glava-cli/: cli.c
glava-config/: config.lua  entry.c  glava-config.c  main.lua  mappings.lua  utils.lua  window.lua
glava-obs/: entry.c
glfft/: LICENSE_ORIGINAL  glfft.cpp  glfft.hpp  glfft_common.hpp  glfft_gl_api_headers.hpp  glfft_gl_interface.cpp  glfft_gl_interface.hpp  glfft_interface.hpp  glfft_wisdom.cpp  glfft_wisdom.hpp
shaders/: bars-user.glsl  bars.glsl  circle.glsl  graph.glsl  radial.glsl  rc.glsl  smooth_parameters.glsl  test_rc.glsl  wave.glsl
shaders/bars/: 1.frag
shaders/circle/: 1.frag  2.frag
shaders/glava/: bars.glsl  blob.glsl  circle.glsl  graph.glsl  radial.glsl  rc.glsl  smooth_parameters.glsl  wave.glsl
shaders/glava/bars/: 1.frag  2.frag
shaders/glava/blob/: 1.frag
shaders/glava/circle/: 1.frag  2.frag
shaders/glava/graph/: 4.frag
shaders/glava/radial/: 1.frag
shaders/glava/test/: 1.frag  2.frag  3.frag
shaders/glava/time-test/: 1.frag
shaders/glava/util/: average_pass.frag  common.glsl  gravity_pass.frag  pass.frag  smooth.glsl  smooth_pass.frag
shaders/graph/: 1.frag  2.frag  2.frag.old  3.frag  3.frag.old  4.frag  settings.glsl
shaders/radial/: 1.frag  ui.lua
shaders/util/: entry.lua  premultiply.frag  smooth.glsl  smooth_pass.frag
shaders/wave/: 1.frag  2.frag  settings.glsl
